# VocabAudioAutomator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  config.yaml.example  gen_all.py  gen_anki.py  gen_audio.py  gen_sentences.py  pyproject.toml  start.py  utils.py  vocab.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
vocab_audio_automator/: cli.py  core.py  gui.py
vocab_audio_automator/ui/: cli.py  gui.py
vocab_audio_automator/ui/tabs/: generator_tab.py
vocab_audio_automator/utils/: constants.py  strings.py
