[tool.poetry]
name = "vocab_audio_automator"
version = "1.0.0"
description = "Generates Anki Cards with Audio via LLMs"
authors = ["tom2208 <dev.tom2208@proton.me>"]
# package-mode = false wurde entfernt!
packages = [{include = "vocab_audio_automator"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
anthropic = "^0.83.0"
pyyaml = "^6.0.3"
openai = "^2.23.0"
edge-tts = "^7.2.7"
genanki = "^0.13.1"
python-dotenv = "^1.0.1"   
customtkinter = "^5.2.2"
auto-py-to-exe = "^2.50.0"
black = "^26.3.1"

[tool.poetry.scripts]
anki-cli = "vocab_audio_automator.ui.cli:main"
anki-gui = "vocab_audio_automator.ui.gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
